# safemail

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  run.py
app/: __init__.py  config.py  crypt_util.py  enums.py  exceptions.py  extensions.py  models.py  scan_queue.py  schemas.py
app/routes/: app_account.py  mail_account.py  scan.py  settings.py  triage.py
app/services/: extractor.py  imap_fetcher.py  ingest.py  mail_scan_service.py  mail_sync_service.py  triage_service.py  vt_client.py
app/static/css/: components.css  input.css  style.css
app/templates/: add_mail_account.html  base.html  base_app.html  base_auth.html  login.html  settings.html  signup.html  triage.html
app/templates/components/: delete_account_modal.html  flash_message.html  folder_list.html  mail_accounts.html  mail_detail.html  mail_list.html  mail_list_container.html  mail_list_polling.html  mails_preview.html  scan_statusbar.html  toolbar.html
app/templates/components/settings/: account.html  mail_accounts.html  other.html  scan_behavior.html
