[project]
name = "safemail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "cryptography>=46.0.5",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "imap-tools>=1.11.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
